--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Click==7.0
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.2
+Flask-Moment==0.9.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.11.1
