--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+afb==1.3.1.2
 alembic==1.4.0
 certifi==2019.11.28
 Click==7.0
@@ -18,6 +19,7 @@ pycryptodome==3.9.7
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-jose-cryptodome==1.3.2
+PyYAML==5.3
 six==1.14.0
 SQLAlchemy==1.3.13
 Werkzeug==1.0.0
