--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==0.9.0
 afb==1.3.1.2
 alembic==1.4.0
 certifi==2019.11.28
@@ -9,6 +10,7 @@ Flask-Migrate==2.5.2
 Flask-Moment==0.9.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-Testing==0.8.0
 future==0.18.2
 itsdangerous==1.1.0
 Jinja2==2.11.1
